--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,10 @@ jobs:
                   if [ -z "$latest_tag" ]; then
                     latest_tag="v0.0.0"
                   fi
+                  case "$latest_tag" in
+                    v*) ;;
+                    *) latest_tag="v$latest_tag" ;;
+                  esac
                   echo "Latest tag: $latest_tag"
                   version=${latest_tag#v}
                   IFS='.' read -r major minor patch <<< "$version"
